[tool.poetry]
name = "recsys"
version = "0.1.0"
description = ""
authors = ["Sebastian Zhao <sebbyzhao@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.1"
pandas = "^2.0.3"
implicit = "^0.7.0"
seaborn = "^0.12.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
